# deep_thought

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml
.github/workflows/: link_mentions.yaml
benches/: forward_prop.rs  test_benchmark.rs
deep_array/: Cargo.toml  README.md
deep_array/benches/: clone.rs
deep_array/examples/: log.rs
deep_array/src/: allocation.rs  arithmetic.rs  array.rs  array_trait.rs  debug_allocator.rs  error.rs  lib.rs  prelude.rs
deep_thought/: Cargo.toml
deep_thought/benches/: forward_prop.rs
deep_thought/examples/: xor.rs
deep_thought/src/: activation.rs  error.rs  lib.rs  loss.rs  neural_network.rs  prelude.rs
deep_thought/src/autograd/: dual.rs  mod.rs
deep_thought/src/optimizer/: mod.rs  optim_trait.rs  sgd.rs
deep_thought_derive/: Cargo.toml
deep_thought_derive/src/: lib.rs
examples/: heart_failure.rs  xor.rs
src/: activation.rs  dataset.rs  error.rs  lib.rs  loss.rs  neural_network.rs  prelude.rs
src/autograd/: dual.rs  dual_cast.rs  dual_numbers.rs  dual_rand.rs  mod.rs
src/optimizer/: mod.rs  optim_trait.rs  sgd.rs  stochastic_gradient_descent.rs
src/tensor/: gradient.rs  mod.rs
