[package]
name = "deep_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_allocator = ["log"]

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"

[dependencies]
thiserror = "1"
log = { version = "0.4", optional = true }

[[bench]]
name = "clone"
harness = false
