[package]
edition = "2021"
name = "deep_array"
version = "0.1.0"

[[bench]]
harness = false
name = "clone"

[dependencies]
thiserror = "1"

[dependencies.log]
optional = true
version = "0.4"

[dev-dependencies]
ctor = "0.1.21"
criterion = "0.3"
env_logger = "0.9"

[features]
debug_allocator = ["log"]
